@@ -8,7 +8,8 @@ coOncoplot(m1, m2, genes = NULL, m1Name = NULL, m2Name = NULL,
   clinicalFeatures1 = NULL, clinicalFeatures2 = NULL,
   annotationColor1 = NULL, annotationColor2 = NULL, colors = NULL,
   removeNonMutated = TRUE, geneNamefont = 10, showSampleNames = FALSE,
-  SampleNamefont = 10, legendFontSize = 10, titleFontSize = 12)
+  SampleNamefont = 10, legendFontSize = 10, titleFontSize = 12,
+  keepGeneOrder = FALSE, includeSyn = FALSE)
 }
 \arguments{
 \item{m1}{first \code{\link{MAF}} object}
@@ -42,6 +43,10 @@ coOncoplot(m1, m2, genes = NULL, m1Name = NULL, m2Name = NULL,
 \item{legendFontSize}{font size for legend. Default 10}
 
 \item{titleFontSize}{font size for title. Default 12}
+
+\item{keepGeneOrder}{force the resulting plot to use the order of the genes as specified. Default FALSE}
+
+\item{includeSyn}{Set to TRUE to include silent variants. Default FALSE.}
 }
 \value{
 Returns nothing. Just draws plot.
